[metadata]
name = all_repos
version = 1.25.0
description = Clone all your repositories and apply sweeping changes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/all-repos
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    identify
    packaging>=20.9
    contextlib-chdir;python_version<"3.11"
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    all-repos-clone=all_repos.clone:main
    all-repos-complete=all_repos.complete:main
    all-repos-find-files=all_repos.find_files:main
    all-repos-grep=all_repos.grep:main
    all-repos-list-repos=all_repos.list_repos:main
    all-repos-manual=all_repos.manual:main
    all-repos-sed=all_repos.sed:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
